<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationsActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigation">

        <LinearLayout
            android:id="@+id/locationsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">

            <!-- Location Block 1 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">

                <TextView
                    android:id="@+id/locationName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loc1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Spinner
                    android:id="@+id/dateSpinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/locationName1"
                    android:minHeight="48dp"
                    android:padding="8dp"/>

                <Spinner
                    android:id="@+id/timeSpinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateSpinner1"
                    android:minHeight="48dp"
                    android:padding="8dp"/>

                <Button
                    android:id="@+id/reserveButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeSpinner1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/reserve"
                    android:padding="10dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            </RelativeLayout>

            <!-- Location Block 2 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">

                <TextView
                    android:id="@+id/locationName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loc2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Spinner
                    android:id="@+id/dateSpinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/locationName2"
                    android:minHeight="48dp"
                    android:padding="8dp"/>

                <Spinner
                    android:id="@+id/timeSpinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateSpinner2"
                    android:minHeight="48dp"
                    android:padding="8dp"/>

                <Button
                    android:id="@+id/reserveButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeSpinner2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/reserve"
                    android:padding="10dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            </RelativeLayout>

            <!-- Location Block 3 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">

                <TextView
                    android:id="@+id/locationName3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loc3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Spinner
                    android:id="@+id/dateSpinner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/locationName3"
                    android:minHeight="48dp"
                    android:padding="8dp"/>

                <Spinner
                    android:id="@+id/timeSpinner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateSpinner3"
                    android:minHeight="48dp"
                    android:padding="8dp"/>

                <Button
                    android:id="@+id/reserveButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeSpinner3"
                    android:layout_centerHorizontal="true"
                    android:text="@string/reserve"
                    android:padding="10dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/reserveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/make_reservation"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <Button
            android:id="@+id/accountButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

    </LinearLayout>
</RelativeLayout>
